# carla_global_planner

./: CMakeLists.txt  README.md  package.xml  requirements.txt
script/: carla_global_planner_node.py
srv/: PlanGlobalPath.srv
utilities/: controller.py  global_planner.py  local_planner.py  misc.py  planner.py
